--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
       </div>
     </section>
 
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
   </body>
 </html>
